[package]
name = "macros"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.87"
futures = "0.3.30"
tokio = { version = "1.40.0", features = [
  "rt",
  "rt-multi-thread",
  "net",
  "macros",
] }
