[package]
name = "macros"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
proc-macro = true


[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = { version = "2.0.57", features = ["extra-traits"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
anyhow = "1.0.87"
futures = "0.3.30"
tokio = { version = "1.40.0", features = [
  "rt",
  "rt-multi-thread",
  "net",
  "macros",
] }
